# controller/task_controller.js
@@ -3,7 +3,7 @@ const User = require("../model/user");
 const Task = require("../model/task");
 const taskService = require("../services/task_service");
 const userService = require("../services/admin_service");
-const nodemailer = require("nodemailer");
+const { sendEmail } = require('../config/send_email');
 require("dotenv").config();
 
 exports.createTask = async (req, res) => {
@@ -84,23 +84,8 @@ exports.assignTask = async (req, res) => {
     const task = await taskService.getTask(id);
     const result = await taskService.assignTask(user ,task, assigneeEmail);
 
-    //sending notification via email to assignee about task assignmnent
-    const transporter = nodemailer.createTransport({
-      // connect with the smtp
-      service: "gmail",
-      auth: {
-        user: process.env.AUTH_EMAIL,
-        pass: process.env.AUTH_PASS,
-      },
-    });
-
-    await transporter.sendMail({
-      from: `"Message from TodoManager" <process.env.AUTH_EMAIL>`, // sender address
-      to: assigneeEmail, // list of receivers
-      subject: "Task Assignment", // Subject line
-      html: `<b>You are assigned a task with ${id} taskId</b>`, // html body
-    });
-
+    const html=  `<b>You are assigned a task with ${id} taskId</b>` // html body;
+    await sendEmail(assigneeEmail,html);
     res.status(200).json({
       message: "Task assigned successfully",
     });
@@ -129,3 +114,17 @@ exports.changeStatus = async (req, res) => {
     });
   }
 };
+
+
+/*
+"requestBody": {
+  "required": true,
+  "content": {
+      "application/json": {
+          "schema": {
+              "$ref": "#/definitions/ResetPassInput"
+          }
+      }
+  }
+},
+*/
